Implement udp echo flow stats in delete action
