# goa/app/media_types.go
@@ -102,12 +102,18 @@ func (mt *Gtpsession) Validate() (err error) {
 // Identifier: application/vnd.udpechoflow+json; view=default
 type Udpechoflow struct {
 	Param *UDPEchoFlowPayload `form:"param,omitempty" json:"param,omitempty" xml:"param,omitempty"`
+	Stats *SendRecvStatistics `form:"stats,omitempty" json:"stats,omitempty" xml:"stats,omitempty"`
 }
 
 // Validate validates the Udpechoflow media type instance.
 func (mt *Udpechoflow) Validate() (err error) {
 	if mt.Param != nil {
 		if err2 := mt.Param.Validate(); err2 != nil {
+			err = goa.MergeErrors(err, err2)
+		}
+	}
+	if mt.Stats != nil {
+		if err2 := mt.Stats.Validate(); err2 != nil {
 			err = goa.MergeErrors(err, err2)
 		}
 	}
